--- a/data/posts/latin-characters-sample.mdx
+++ b/data/posts/latin-characters-sample.mdx
@@ -1,6 +1,8 @@
 ---
 title: Latin Characters Sample
 date: 2020-03-11
+draft: false
+tags: ["sample"]
 ---
 
 # Lorem ipsum dolor sit amet consectetur adipisicing elit
