--- a/data/posts/markdown-guide.mdx
+++ b/data/posts/markdown-guide.mdx
@@ -1,6 +1,8 @@
 ---
-title: "Markdown Guide"
+title: Markdown Guide
 date: 2018-08-21
+draft: false
+tags: ["sample"]
 ---
 
 # Introduction
@@ -42,9 +44,7 @@ _This text will be italic_
 
 **This text will be bold**
 
-_You **can** combine them_
-```
-
+_You **can** combine them_9
 _This text will be italic_
 
 **This text will be bold**
@@ -56,10 +56,12 @@ _You **can** combine them_
 ### Unordered
 
 ```
+
 - Item 1
 - Item 2
   - Item 2a
   - Item 2b
+
 ```
 
 - Item 1
@@ -70,11 +72,13 @@ _You **can** combine them_
 ### Ordered
 
 ```
+
 1. Item 1
 1. Item 2
 1. Item 3
    1. Item 3a
    1. Item 3b
+
 ```
 
 1. Item 1
@@ -86,8 +90,10 @@ _You **can** combine them_
 ## Images
 
 ```
+
 ![GitHub Logo](https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png)
 Format: ![Alt Text](url)
+
 ```
 
 ![GitHub Logo](https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png)
@@ -95,8 +101,10 @@ Format: ![Alt Text](url)
 ## Links
 
 ```
+
 http://github.com - automatic!
 [GitHub](http://github.com)
+
 ```
 
 http://github.com - automatic!
@@ -105,10 +113,12 @@ http://github.com - automatic!
 ## Blockquotes
 
 ```
+
 As Kanye West said:
 
 > We're living the future so
 > the present is our past.
+
 ```
 
 As Kanye West said:
@@ -119,8 +129,10 @@ As Kanye West said:
 ## Inline code
 
 ```
+
 I think you should use an
 `<addr>` element here instead.
+
 ```
 
 I think you should use an
@@ -130,14 +142,16 @@ I think you should use an
 
 Here’s an example of how you can use syntax highlighting with [GitHub Flavored Markdown](https://help.github.com/articles/basic-writing-and-formatting-syntax/):
 
-````
+```
+
 ```js title="fancyAlert.js"
 function fancyAlert(arg) {
-  if (arg) {
-    $.facebox({ div: '#foo' })
-  }
+	if (arg) {
+		$.facebox({ div: "#foo" });
+	}
 }
 ```
+
 ````
 
 And here's how it looks - nicely colored with styled code titles!
@@ -193,3 +207,4 @@ You can create tables by assembling a list of words and dividing them with hyphe
 ## Strikethrough
 
 Any word wrapped with two tildes (like `~~this~~`) will appear ~~crossed out~~.
+````
